--- a/index.html
+++ b/index.html
@@ -17,35 +17,45 @@
 		<header class="header">
 			<div class="container header__container">
 				<a class="logo" href="index.html" lang="en">Web<span class="logo__subtext">Studio</span></a>
-				<nav class="navigation">
-					<ul class="navigation__list">
-						<li class="navigation__item">
-							<a class="navigation__link current" href="index.html">Студія</a>
+				<button class="menu-toggle" data-menu-button>
+					<svg width="40" height="40">
+						<use class="icon-menu" href="./images/icons.svg#menu"></use>
+						<use class="icon-cross" href="./images/icons.svg#cross"></use>
+					</svg>
+				</button>
+				<div class="menu visually-hidden" data-menu>
+					<nav class="navigation">
+						<ul class="navigation__list">
+							<li class="navigation__item">
+								<a class="navigation__link current" href="index.html">Студія</a>
+							</li>
+							<li class="navigation__item">
+								<a class="navigation__link" href="portfolio.html">Портфоліо</a>
+							</li>
+							<li class="navigation__item"
+								><a class="navigation__link" href="contacts.html">Контакти</a>
+							</li>
+						</ul>
+					</nav>
+					<ul class="contacts">
+						<li class="contacts__item"
+							><a class="contacts__link" href="mailto:info@devstudio.com">
+								<svg class="contacts__icon" width="16" height="12">
+									<use href="./images/icons.svg#icon-mail"></use>
+								</svg>
+								info@devstudio.com
+							</a>
 						</li>
-						<li class="navigation__item">
-							<a class="navigation__link" href="portfolio.html">Портфоліо</a>
+						<li class="contacts__item">
+							<a class="contacts__link" href="tel:+380961111111">
+								<svg class="contacts__icon" width="10" height="16">
+									<use href="./images/icons.svg#icon-smartphone"></use>
+								</svg>
+								+38 096 111 11 11
+							</a>
 						</li>
-						<li class="navigation__item"><a class="navigation__link" href="contacts.html">Контакти</a></li>
 					</ul>
-				</nav>
-				<ul class="contacts">
-					<li class="contacts__item"
-						><a class="contacts__link" href="mailto:info@devstudio.com">
-							<svg class="contacts__icon" width="16" height="12">
-								<use href="./images/icons.svg#icon-mail"></use>
-							</svg>
-							info@devstudio.com</a
-						></li
-					>
-					<li class="contacts__item"
-						><a class="contacts__link" href="tel:+380961111111">
-							<svg class="contacts__icon" width="10" height="16">
-								<use href="./images/icons.svg#icon-smartphone"></use>
-							</svg>
-							+38 096 111 11 11</a
-						></li
-					>
-				</ul>
+				</div>
 			</div>
 		</header>
 		<main>
@@ -112,7 +122,7 @@
 				</div>
 			</section>
 
-			<section class="section">
+			<section class="section visually-hidden">
 				<div class="container">
 					<h2 class="heading">Чим ми займаємось</h2>
 					<ul class="image-set">
@@ -137,7 +147,7 @@
 					<h2 class="heading">Наша команда</h2>
 					<ul class="card-set">
 						<li class="card-set__item card-set__item--bordered">
-							<img src="./images/photo/photo-1.jpg" alt="Фото Дем'яненко Ігор" width="270" height="260" />
+							<img src="./images/photo/photo-1.jpg" alt="Фото Дем'яненко Ігор" />
 							<div class="card-set__team-about">
 								<h3 class="card-set__worker-name">Ігор Дем'яненко</h3>
 								<p class="card-set__profession" lang="en">Product Designer</p>
@@ -178,7 +188,7 @@
 							</div>
 						</li>
 						<li class="card-set__item card-set__item--bordered">
-							<img src="./images/photo/photo-2.jpg" alt="Фото Ольга Рєпіна" width="270" height="260" />
+							<img src="./images/photo/photo-2.jpg" alt="Фото Ольга Рєпіна" />
 							<div class="card-set__team-about">
 								<h3 class="card-set__worker-name">Ольга Рєпіна</h3>
 								<p class="card-set__profession" lang="en">Frontend Developer</p>
@@ -219,7 +229,7 @@
 							</div>
 						</li>
 						<li class="card-set__item card-set__item--bordered">
-							<img src="./images/photo/photo-3.jpg" alt="Фото Микола Тарасов" width="270" height="260" />
+							<img src="./images/photo/photo-3.jpg" alt="Фото Микола Тарасов" />
 							<div class="card-set__team-about">
 								<h3 class="card-set__worker-name">Микола Тарасов</h3>
 								<p class="card-set__profession" lang="en">Marketing</p>
@@ -260,7 +270,7 @@
 							</div>
 						</li>
 						<li class="card-set__item card-set__item--bordered">
-							<img src="./images/photo/photo-4.jpg" alt="Фото Михайло Єрмаков" width="270" height="260" />
+							<img src="./images/photo/photo-4.jpg" alt="Фото Михайло Єрмаков" />
 							<div class="card-set__team-about">
 								<h3 class="card-set__worker-name">Михайло Єрмаков</h3>
 								<p class="card-set__profession" lang="en">UI Designer</p>
@@ -483,5 +493,6 @@
 			</div>
 		</footer>
 		<script src="./js/modal.js"></script>
+		<script src="./js/menu.js"></script>
 	</body>
 </html>
