--- a/portfolio.html
+++ b/portfolio.html
@@ -17,35 +17,45 @@
 		<header class="header">
 			<div class="container header__container">
 				<a class="logo" href="index.html" lang="en">Web<span class="logo__subtext">Studio</span></a>
-				<nav class="navigation">
-					<ul class="navigation__list">
-						<li class="navigation__item">
-							<a class="navigation__link" href="index.html">Студія</a>
+				<button class="menu-toggle" data-menu-button>
+					<svg width="40" height="40">
+						<use class="icon-menu" href="./images/icons.svg#menu"></use>
+						<use class="icon-cross" href="./images/icons.svg#cross"></use>
+					</svg>
+				</button>
+				<div class="menu visually-hidden" data-menu>
+					<nav class="navigation">
+						<ul class="navigation__list">
+							<li class="navigation__item">
+								<a class="navigation__link" href="index.html">Студія</a>
+							</li>
+							<li class="navigation__item">
+								<a class="navigation__link current" href="portfolio.html">Портфоліо</a>
+							</li>
+							<li class="navigation__item"
+								><a class="navigation__link" href="contacts.html">Контакти</a>
+							</li>
+						</ul>
+					</nav>
+					<ul class="contacts">
+						<li class="contacts__item"
+							><a class="contacts__link" href="mailto:info@devstudio.com">
+								<svg class="contacts__icon" width="16" height="12">
+									<use href="./images/icons.svg#icon-mail"></use>
+								</svg>
+								info@devstudio.com
+							</a>
 						</li>
-						<li class="navigation__item">
-							<a class="navigation__link current" href="portfolio.html">Портфоліо</a>
+						<li class="contacts__item">
+							<a class="contacts__link" href="tel:+380961111111">
+								<svg class="contacts__icon" width="10" height="16">
+									<use href="./images/icons.svg#icon-smartphone"></use>
+								</svg>
+								+38 096 111 11 11
+							</a>
 						</li>
-						<li class="navigation__item"><a class="navigation__link" href="contacts.html">Контакти</a></li>
 					</ul>
-				</nav>
-				<ul class="contacts">
-					<li class="contacts__item"
-						><a class="contacts__link" href="mailto:info@devstudio.com">
-							<svg class="contacts__icon" width="16" height="12">
-								<use href="./images/icons.svg#icon-mail"></use>
-							</svg>
-							info@devstudio.com</a
-						></li
-					>
-					<li class="contacts__item"
-						><a class="contacts__link" href="tel:+380961111111">
-							<svg class="contacts__icon" width="10" height="16">
-								<use href="./images/icons.svg#icon-smartphone"></use>
-							</svg>
-							+38 096 111 11 11</a
-						></li
-					>
-				</ul>
+				</div>
 			</div>
 		</header>
 		<main>
@@ -323,5 +333,6 @@
 				</div>
 			</div>
 		</footer>
+		<script src="./js/menu.js"></script>
 	</body>
 </html>
