modified:   css/main.css 	modified:   css/main.css.map 	modified:   css/main.min.css 	modified:   css/main.min.css.map 	modified:   index.html 	modified:   js/menu.js 	modified:   portfolio.html 	modified:   sass/components/_card-set.scss 	modified:   sass/components/_footer.scss 	modified:   sass/components/_image-set.scss 	modified:   sass/components/header/_contacts.scss 	modified:   sass/components/header/_container.scss 	modified:   sass/components/header/_logo.scss 	modified:   sass/components/header/_navigation.scss 	modified:   sass/utils/_common.scss

--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,8 @@
 		<link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-			rel="stylesheet"
+			rel="preload"
+			as="style"
 		/>
 		<link rel="stylesheet" href="./css/main.min.css" />
 	</head>
@@ -23,7 +24,7 @@
 						<use class="icon-cross" href="./images/icons.svg#cross"></use>
 					</svg>
 				</button>
-				<div class="menu visually-hidden" data-menu>
+				<div class="menu is-closed" data-menu>
 					<nav class="navigation">
 						<ul class="navigation__list">
 							<li class="navigation__item">
