--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-			rel="stylesheet"
+			rel="preload"
+			as="style"
 		/>
 		<link rel="stylesheet" href="./css/main.min.css" />
 	</head>
@@ -23,7 +24,7 @@
 						<use class="icon-cross" href="./images/icons.svg#cross"></use>
 					</svg>
 				</button>
-				<div class="menu visually-hidden" data-menu>
+				<div class="menu is-closed" data-menu>
 					<nav class="navigation">
 						<ul class="navigation__list">
 							<li class="navigation__item">
@@ -55,6 +56,12 @@
 							</a>
 						</li>
 					</ul>
+					<ul class="social-links">
+						<li><a href="#" class="social-links__link">Instagram</a></li>
+						<li><a href="#" class="social-links__link">Twitter</a></li>
+						<li><a href="#" class="social-links__link">Facebook</a></li>
+						<li><a href="#" class="social-links__link">LinkedIn</a></li>
+					</ul>
 				</div>
 			</div>
 		</header>
@@ -74,7 +81,7 @@
 				<div class="container">
 					<h2 class="heading visually-hidden">Наші особливості</h2>
 					<ul class="card-set">
-						<li class="card-set__item card-set__item--fixed-width">
+						<li class="card-set__item">
 							<div class="card-set__icon">
 								<svg width="70" height="70">
 									<use href="./images/icons.svg#icon-antenna"></use>
@@ -85,7 +92,7 @@
 								Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
 							</p>
 						</li>
-						<li class="card-set__item card-set__item--fixed-width">
+						<li class="card-set__item">
 							<div class="card-set__icon">
 								<svg width="70" height="70">
 									<use href="./images/icons.svg#icon-clock"></use>
@@ -96,7 +103,7 @@
 								Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
 							</p>
 						</li>
-						<li class="card-set__item card-set__item--fixed-width">
+						<li class="card-set__item">
 							<div class="card-set__icon">
 								<svg width="70" height="70">
 									<use href="./images/icons.svg#icon-diagram"></use>
@@ -107,7 +114,7 @@
 								Так само консультація з широким активом значно обумовлює.
 							</p>
 						</li>
-						<li class="card-set__item card-set__item--fixed-width">
+						<li class="card-set__item">
 							<div class="card-set__icon">
 								<svg width="70" height="70">
 									<use href="./images/icons.svg#icon-astronaut"></use>
