--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 		<link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-			rel="preload"
-			as="style"
+			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="./css/main.min.css" />
 	</head>
@@ -129,20 +128,46 @@
 				</div>
 			</section>
 
-			<section class="section visually-hidden">
+			<section class="section section--desktop">
 				<div class="container">
 					<h2 class="heading">Чим ми займаємось</h2>
 					<ul class="image-set">
-						<li class="image-set__item">
-							<img src="./images/box-1.jpg" alt="Написання коду" width="370" height="294" />
+						<li class="image-set__item image-set__item--col-3">
+							<picture>
+								<source
+									media="(min-width: 1200px)"
+									srcset="./images/box/box-1_lg.jpg 1x, ./images/box/box-1_lg@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<img src="./images/box/box-1_lg.jpg" alt="Написання коду" width="418" height="346" />
+							</picture>
 							<h3 class="image-set__title">Десктопні програми</h3>
 						</li>
-						<li class="image-set__item">
-							<img src="./images/box-2.jpg" alt="Розробка мобільного макету" width="370" height="294" />
+						<li class="image-set__item image-set__item--col-3">
+							<picture>
+								<source
+									media="(min-width: 1200px)"
+									srcset="./images/box/box-2_lg.jpg 1x, ./images/box/box-2_lg@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<img
+									src="./images/box/box-2_lg.jpg"
+									alt="Розробка мобільного макету"
+									width="418"
+									height="346"
+								/>
+							</picture>
 							<h3 class="image-set__title">Мобільні додатки</h3>
 						</li>
-						<li class="image-set__item">
-							<img src="./images/box-3.jpg" alt="Підбір кольору" width="370" height="294" />
+						<li class="image-set__item image-set__item--col-3">
+							<picture>
+								<source
+									media="(min-width: 1200px)"
+									srcset="./images/box/box-3_lg.jpg 1x, ./images/box/box-3_lg@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<img src="./images/box/box-3_lg.jpg" alt="Підбір кольору" width="418" height="346" />
+							</picture>
 							<h3 class="image-set__title">Дизайнерські рішення</h3>
 						</li>
 					</ul>
@@ -154,7 +179,32 @@
 					<h2 class="heading">Наша команда</h2>
 					<ul class="card-set">
 						<li class="card-set__item card-set__item--bordered">
-							<img src="./images/photo/photo-1.jpg" alt="Фото Дем'яненко Ігор" />
+							<picture>
+								<!-- desktop screen -->
+								<source
+									media="(min-width: 1200px)"
+									srcset="./images/photo/photo_lg-1.jpg 1x, ./images/photo/photo_lg-1@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<!-- tablet screen -->
+								<source
+									media="(min-width: 768px)"
+									srcset="./images/photo/photo_md-1.jpg 1x, ./images/photo/photo_md-1@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<!-- mobile screen -->
+								<source
+									media="(max-width: 767px)"
+									srcset="./images/photo/photo_sm-1.jpg 1x, ./images/photo/photo_sm-1@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<img
+									src="./images/photo/photo_sm-1.jpg"
+									alt="Ігор Дем'яненко"
+									width="450"
+									height="460"
+								/>
+							</picture>
 							<div class="card-set__team-about">
 								<h3 class="card-set__worker-name">Ігор Дем'яненко</h3>
 								<p class="card-set__profession" lang="en">Product Designer</p>
@@ -195,7 +245,27 @@
 							</div>
 						</li>
 						<li class="card-set__item card-set__item--bordered">
-							<img src="./images/photo/photo-2.jpg" alt="Фото Ольга Рєпіна" />
+							<picture>
+								<!-- desktop screen -->
+								<source
+									media="(min-width: 1200px)"
+									srcset="./images/photo/photo_lg-2.jpg 1x, ./images/photo/photo_lg-2@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<!-- tablet screen -->
+								<source
+									media="(min-width: 768px)"
+									srcset="./images/photo/photo_md-2.jpg 1x, ./images/photo/photo_md-2@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<!-- mobile screen -->
+								<source
+									media="(max-width: 767px)"
+									srcset="./images/photo/photo_sm-2.jpg 1x, ./images/photo/photo_sm-2@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<img src="./images/photo/photo_sm-2.jpg" alt="Ольга Рєпіна" width="450" height="460" />
+							</picture>
 							<div class="card-set__team-about">
 								<h3 class="card-set__worker-name">Ольга Рєпіна</h3>
 								<p class="card-set__profession" lang="en">Frontend Developer</p>
@@ -236,7 +306,32 @@
 							</div>
 						</li>
 						<li class="card-set__item card-set__item--bordered">
-							<img src="./images/photo/photo-3.jpg" alt="Фото Микола Тарасов" />
+							<picture>
+								<!-- desktop screen -->
+								<source
+									media="(min-width: 1200px)"
+									srcset="./images/photo/photo_lg-3.jpg 1x, ./images/photo/photo_lg-3@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<!-- tablet screen -->
+								<source
+									media="(min-width: 768px)"
+									srcset="./images/photo/photo_md-3.jpg 1x, ./images/photo/photo_md-3@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<!-- mobile screen -->
+								<source
+									media="(max-width: 767px)"
+									srcset="./images/photo/photo_sm-3.jpg 1x, ./images/photo/photo_sm-3@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<img
+									src="./images/photo/photo_sm-3.jpg"
+									alt="Микола Тарасов"
+									width="450"
+									height="460"
+								/>
+							</picture>
 							<div class="card-set__team-about">
 								<h3 class="card-set__worker-name">Микола Тарасов</h3>
 								<p class="card-set__profession" lang="en">Marketing</p>
@@ -277,7 +372,32 @@
 							</div>
 						</li>
 						<li class="card-set__item card-set__item--bordered">
-							<img src="./images/photo/photo-4.jpg" alt="Фото Михайло Єрмаков" />
+							<picture>
+								<!-- desktop screen -->
+								<source
+									media="(min-width: 1200px)"
+									srcset="./images/photo/photo_lg-4.jpg 1x, ./images/photo/photo_lg-4@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<!-- tablet screen -->
+								<source
+									media="(min-width: 768px)"
+									srcset="./images/photo/photo_md-4.jpg 1x, ./images/photo/photo_md-4@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<!-- mobile screen -->
+								<source
+									media="(max-width: 767px)"
+									srcset="./images/photo/photo_sm-4.jpg 1x, ./images/photo/photo_sm-4@2x.jpg 2x"
+									type="image/jpg"
+								/>
+								<img
+									src="./images/photo/photo_sm-4.jpg"
+									alt="Михайло Єрмаков"
+									width="450"
+									height="460"
+								/>
+							</picture>
 							<div class="card-set__team-about">
 								<h3 class="card-set__worker-name">Михайло Єрмаков</h3>
 								<p class="card-set__profession" lang="en">UI Designer</p>
