--- a/portfolio.html
+++ b/portfolio.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="description" content="Портфоліо веб-студії" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Web Studio</title>
 		<link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
@@ -71,7 +72,7 @@
 					</ul>
 					<ul class="card-set">
 						<li class="card-set__item card-set__item--shadow">
-							<a class="card-set__link" href="">
+							<a class="card-set__link" href="#">
 								<div class="card-set__description">
 									<picture>
 										<!-- desktop screen -->
@@ -121,7 +122,7 @@
 							</a>
 						</li>
 						<li class="card-set__item card-set__item--shadow">
-							<a class="card-set__link" href="">
+							<a class="card-set__link" href="#">
 								<div class="card-set__description">
 									<picture>
 										<!-- desktop screen -->
@@ -171,7 +172,7 @@
 							</a>
 						</li>
 						<li class="card-set__item card-set__item--shadow">
-							<a class="card-set__link" href="">
+							<a class="card-set__link" href="#">
 								<div class="card-set__description">
 									<picture>
 										<!-- desktop screen -->
@@ -221,7 +222,7 @@
 							</a>
 						</li>
 						<li class="card-set__item card-set__item--shadow">
-							<a class="card-set__link" href="">
+							<a class="card-set__link" href="#">
 								<div class="card-set__description">
 									<picture>
 										<!-- desktop screen -->
@@ -271,7 +272,7 @@
 							</a>
 						</li>
 						<li class="card-set__item card-set__item--shadow">
-							<a class="card-set__link" href="">
+							<a class="card-set__link" href="#">
 								<div class="card-set__description">
 									<picture>
 										<!-- desktop screen -->
@@ -321,7 +322,7 @@
 							</a>
 						</li>
 						<li class="card-set__item card-set__item--shadow">
-							<a class="card-set__link" href="">
+							<a class="card-set__link" href="#">
 								<div class="card-set__description">
 									<picture>
 										<!-- desktop screen -->
@@ -371,7 +372,7 @@
 							</a>
 						</li>
 						<li class="card-set__item card-set__item--shadow">
-							<a class="card-set__link" href="">
+							<a class="card-set__link" href="#">
 								<div class="card-set__description">
 									<picture>
 										<!-- desktop screen -->
@@ -421,7 +422,7 @@
 							</a>
 						</li>
 						<li class="card-set__item card-set__item--shadow">
-							<a class="card-set__link" href="">
+							<a class="card-set__link" href="#">
 								<div class="card-set__description">
 									<picture>
 										<!-- desktop screen -->
@@ -471,7 +472,7 @@
 							</a>
 						</li>
 						<li class="card-set__item card-set__item--shadow">
-							<a class="card-set__link" href="">
+							<a class="card-set__link" href="#">
 								<div class="card-set__description">
 									<picture>
 										<!-- desktop screen -->
@@ -546,7 +547,7 @@
 					<p class="footer__subtitle">Приєднуйтесь</p>
 					<ul class="social">
 						<li class="social__item">
-							<a class="social__link" aria-label="instagram" href="">
+							<a class="social__link" aria-label="instagram" href="#">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/icons.svg#icon-instagram"></use>
 								</svg>
@@ -554,7 +555,7 @@
 							</a>
 						</li>
 						<li class="social__item">
-							<a class="social__link" aria-label="twitter" href="">
+							<a class="social__link" aria-label="twitter" href="#">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/icons.svg#icon-twitter"></use>
 								</svg>
@@ -562,7 +563,7 @@
 							</a>
 						</li>
 						<li class="social__item">
-							<a class="social__link" aria-label="facebook" href="">
+							<a class="social__link" aria-label="facebook" href="#">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/icons.svg#icon-facebook"></use>
 								</svg>
@@ -570,7 +571,7 @@
 							</a>
 						</li>
 						<li class="social__item">
-							<a class="social__link" aria-label="linkedin" href="">
+							<a class="social__link" aria-label="linkedin" href="#">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/icons.svg#icon-linkedin"></use>
 								</svg>
