--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="description" content="Портфоліо веб-студії" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Web Studio</title>
 		<link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
@@ -210,7 +211,7 @@
 								<p class="card-set__profession" lang="en">Product Designer</p>
 								<ul class="social">
 									<li class="social__item">
-										<a class="social__link" aria-label="instagram" href="">
+										<a class="social__link" aria-label="instagram" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
@@ -218,7 +219,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="twitter" href="">
+										<a class="social__link" aria-label="twitter" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
@@ -226,7 +227,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="facebook" href="">
+										<a class="social__link" aria-label="facebook" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
@@ -234,7 +235,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="linkedin" href="">
+										<a class="social__link" aria-label="linkedin" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
@@ -271,7 +272,7 @@
 								<p class="card-set__profession" lang="en">Frontend Developer</p>
 								<ul class="social">
 									<li class="social__item">
-										<a class="social__link" aria-label="instagram" href="">
+										<a class="social__link" aria-label="instagram" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
@@ -279,7 +280,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="twitter" href="">
+										<a class="social__link" aria-label="twitter" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
@@ -287,7 +288,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="facebook" href="">
+										<a class="social__link" aria-label="facebook" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
@@ -295,7 +296,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="linkedin" href="">
+										<a class="social__link" aria-label="linkedin" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
@@ -337,7 +338,7 @@
 								<p class="card-set__profession" lang="en">Marketing</p>
 								<ul class="social">
 									<li class="social__item">
-										<a class="social__link" aria-label="instagram" href="">
+										<a class="social__link" aria-label="instagram" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
@@ -345,7 +346,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="twitter" href="">
+										<a class="social__link" aria-label="twitter" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
@@ -353,7 +354,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="facebook" href="">
+										<a class="social__link" aria-label="facebook" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
@@ -361,7 +362,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="linkedin" href="">
+										<a class="social__link" aria-label="linkedin" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
@@ -403,7 +404,7 @@
 								<p class="card-set__profession" lang="en">UI Designer</p>
 								<ul class="social">
 									<li class="social__item">
-										<a class="social__link" aria-label="instagram" href="">
+										<a class="social__link" aria-label="instagram" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
@@ -411,7 +412,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="twitter" href="">
+										<a class="social__link" aria-label="twitter" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
@@ -419,7 +420,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="facebook" href="">
+										<a class="social__link" aria-label="facebook" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
@@ -427,7 +428,7 @@
 										</a>
 									</li>
 									<li class="social__item">
-										<a class="social__link" aria-label="linkedin" href="">
+										<a class="social__link" aria-label="linkedin" href="#">
 											<svg class="social__icon" width="20" height="20">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
@@ -446,42 +447,42 @@
 					<h2 class="heading">Постійні клієнти</h2>
 					<ul class="image-set">
 						<li class="image-set__item">
-							<a class="image-set__link" href="">
+							<a class="image-set__link" href="#">
 								<svg class="image-set__icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-logo1"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="image-set__item">
-							<a class="image-set__link" href="">
+							<a class="image-set__link" href="#">
 								<svg class="image-set__icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-logo2"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="image-set__item">
-							<a class="image-set__link" href="">
+							<a class="image-set__link" href="#">
 								<svg class="image-set__icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-logo3"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="image-set__item">
-							<a class="image-set__link" href="">
+							<a class="image-set__link" href="#">
 								<svg class="image-set__icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-logo4"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="image-set__item">
-							<a class="image-set__link" href="">
+							<a class="image-set__link" href="#">
 								<svg class="image-set__icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-logo5"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="image-set__item">
-							<a class="image-set__link" href="">
+							<a class="image-set__link" href="#">
 								<svg class="image-set__icon" width="106" height="60">
 									<use href="./images/icons.svg#icon-logo6"></use>
 								</svg>
@@ -566,7 +567,7 @@
 					<p class="footer__subtitle">Приєднуйтесь</p>
 					<ul class="social">
 						<li class="social__item">
-							<a class="social__link" aria-label="instagram" href="">
+							<a class="social__link" aria-label="instagram" href="#">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/icons.svg#icon-instagram"></use>
 								</svg>
@@ -574,7 +575,7 @@
 							</a>
 						</li>
 						<li class="social__item">
-							<a class="social__link" aria-label="twitter" href="">
+							<a class="social__link" aria-label="twitter" href="#">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/icons.svg#icon-twitter"></use>
 								</svg>
@@ -582,7 +583,7 @@
 							</a>
 						</li>
 						<li class="social__item">
-							<a class="social__link" aria-label="facebook" href="">
+							<a class="social__link" aria-label="facebook" href="#">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/icons.svg#icon-facebook"></use>
 								</svg>
@@ -590,7 +591,7 @@
 							</a>
 						</li>
 						<li class="social__item">
-							<a class="social__link" aria-label="linkedin" href="">
+							<a class="social__link" aria-label="linkedin" href="#">
 								<svg class="social__icon" width="20" height="20">
 									<use href="./images/icons.svg#icon-linkedin"></use>
 								</svg>
